ทำค้นหาของระบบออกใบเสร็ง แก้หน้าUI - close #127
